Set show summary to true

--- a/content/_index.html
+++ b/content/_index.html
@@ -4,7 +4,7 @@ description: "My Resume"
 
 showEdit: false
 showDateUpdated: false
-showSummary: false
+showSummary: true
 showAuthor: false
 showReadingTime: false
 
