--- a/content/_index.html
+++ b/content/_index.html
@@ -14,7 +14,7 @@ showBreadcrumbs: true
 lastmod: 2022-08-18
 ---
 
-<div class="text-center">
+<div class="text-center pt-3">
   <h1>
     KSCU 103.3 FM IS THE STUDENT-RUN RADIO STATION AT SANTA CLARA UNIVERSITY IN
     SILICON VALLEY.
