--- a/content/_index.html
+++ b/content/_index.html
@@ -14,27 +14,23 @@ showBreadcrumbs: true
 lastmod: 2022-08-18
 ---
 
-<div class="text-center pt-3">
-  <h1>
-    KSCU 103.3 FM IS THE STUDENT-RUN RADIO STATION AT SANTA CLARA UNIVERSITY IN
-    SILICON VALLEY.
-  </h1>
-  <p>
-    KSCU 103.3 FM continues a long tradition of radio broadcasting at Santa
-    Clara University dating back to 1948 when Fr. Ferdinand J. Spieler, S.J.,
-    created KVSC, “The Kampus Voice of Santa Clara.” Reflecting the mission and
-    goals of Santa Clara University, the Jesuit University of Silicon Valley,
-    the station has a proud history as a forum for the debate of issues, ideas,
-    and concerns on campus and in the surrounding community, and it offers an
-    eclectic selection of non-commercial music, sports, and public affairs
-    programming.
-  </p>
+<div class="text-justify pt-3">
+  <div class="text-3xl font-light">
+    <p>
+      KSCU 103.3 FM continues a long tradition of radio broadcasting at Santa
+      Clara University dating back to 1948 when Fr. Ferdinand J. Spieler, S.J.,
+      created KVSC, “The Kampus Voice of Santa Clara.” Reflecting the mission
+      and goals of Santa Clara University, the Jesuit University of Silicon
+      Valley, the station has a proud history as a forum for the debate of
+      issues, ideas, and concerns on campus and in the surrounding community,
+      and it offers an eclectic selection of non-commercial music, sports, and
+      public affairs programming.
+    </p>
+  </div>
 
-  <div class="font-semibold">
+  <div class="font-semibold text-xl">
     THE KSCU ONLINE PUBLIC INSPECTION FILE (OPIF) WITH ALL LISCENSING AND OTHER
     FCC DOCUMENTS IS AVAILABLE HERE.
   </div>
 </div>
 <br /><br />
-
-
