Changed font sizing on homepage.

--- a/content/_index.html
+++ b/content/_index.html
@@ -15,7 +15,7 @@ lastmod: 2022-08-18
 ---
 
 <div class="text-justify pt-3">
-  <div class="text-3xl font-light">
+  <div class="text-lg font-light">
     <p>
       KSCU 103.3 FM continues a long tradition of radio broadcasting at Santa
       Clara University dating back to 1948 when Fr. Ferdinand J. Spieler, S.J.,
@@ -28,7 +28,7 @@ lastmod: 2022-08-18
     </p>
   </div>
 
-  <div class="font-semibold text-xl">
+  <div class="font-semibold text-md">
     THE KSCU ONLINE PUBLIC INSPECTION FILE (OPIF) WITH ALL LISCENSING AND OTHER
     FCC DOCUMENTS IS AVAILABLE HERE.
   </div>
