added image to the body of the homepage and header text

--- a/content/_index.html
+++ b/content/_index.html
@@ -14,6 +14,14 @@ showBreadcrumbs: true
 lastmod: 2022-08-18
 ---
 
+<div class="flex">
+  <img src="/kscuwebsitepic.jpeg" alt="KSCU" width="500" height="600">
+  <div class="ml-10" style="margin: auto; margin-left: -20px;">
+    <h1>THE STUDENT-RUN RADIO STATION AT SANTA CLARA UNIVERSITY IN SILICON VALLEY.</h1>
+  </div>
+</div>
+
+
 <div class="text-justify pt-3">
   <div class="text-lg font-light">
     <p>
