adjusted header text position

--- a/content/_index.html
+++ b/content/_index.html
@@ -15,9 +15,18 @@ lastmod: 2022-08-18
 ---
 
 <div class="flex">
-  <img src="/kscuwebsitepic.jpeg" alt="KSCU" width="500" height="600">
-  <div class="ml-10" style="margin: auto; margin-left: -20px;">
-    <h1>THE STUDENT-RUN RADIO STATION AT SANTA CLARA UNIVERSITY IN SILICON VALLEY.</h1>
+  <img src="/kscuwebsitepic.jpeg" alt="KSCU" width="500" height="600" 
+  style="border-radius: 72px; opacity: 0.25;">
+  <div style="margin: auto; margin-left: -65px; margin-top: 100px;">
+    <div style="font-size: 40px;">
+      <span class="font-light">
+        THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      </span>
+      <span class="font-semibold">
+        STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp; AT SANTA 
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; CLARA UNIVERSITY &nbsp;
+      </span>
+    </div>
   </div>
 </div>
 
