--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -1,18 +1,23 @@
 ---
-title: "Fall 2022 Schedule"
+title: "Schedule, Past Tracklists"
 date: 2020-08-14
 draft: false
 description: "KSCU Fall 2022 Schedule."
 showDate: false
 showAuthor: false
 showReadingTime: false
-showEdit: false
+showEdit: false 
 showPagination: false
 ---
 <style>
 #metadata {
     display: none;
 }
+
+article > header.max-w-prose {
+    max-width: 100%;
+}
+
 </style>
 <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
     style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
