Updated picture and styling a bit.

--- a/content/_index.html
+++ b/content/_index.html
@@ -14,16 +14,21 @@ showBreadcrumbs: true
 lastmod: 2022-08-18
 ---
 
-<div class="flex">
-  <img src="/kscuwebsitepic.jpeg" alt="KSCU" width="500" height="600" 
-  style="border-radius: 72px; opacity: 0.25;">
-  <div style="margin: auto; margin-left: -65px; margin-top: 100px;">
-    <div style="font-size: 40px;">
+<div class="flex h-full">
+  <img class="ml-3" src="/kscuwebsitepic.jpeg" alt="KSCU" width="550" height="257" 
+  style="
+  max-height: 257px;
+  border-radius: 15px;
+  opacity: 1;
+  z-index: 1;">
+  <div style="margin: auto; margin-left: -65px; margin-top: 150px; z-index: 2;">
+    <div style="font-size: 36px;">
       <span class="font-light">
         THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       </span>
       <span class="font-semibold">
-        STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp; AT SANTA 
+        STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp; </span>
+        <span>AT </span><span class="font-semibold">SANTA 
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; CLARA UNIVERSITY &nbsp;
       </span>
     </div>
