--- a/content/_index.html
+++ b/content/_index.html
@@ -28,13 +28,13 @@ lastmod: 2022-08-18
       alt="KSCU"
       width=""
       height=""
-      style="max-height: 257px; border-radius: 15px; opacity: 1; z-index: 1"
+      style="max-height: 257px; border-radius: 15px; opacity: 1; z-index: 1; "
     />
   </div>
 
   <div id="header_text" style="z-index: 2;">
     <div class="">
-      <span class="font-light"> THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span>
+      <!-- <span class="font-light"> THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span> -->
       <span class="font-semibold">
         STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp;
       </span>
@@ -78,15 +78,25 @@ lastmod: 2022-08-18
     }
   }-->
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+  #header_text {
+    color: white;
+	  mix-blend-mode: difference;
+	  /* font: 900 35vmin/35vh; */
+    font-family: 'Special Elite', cursive;
+	  text-align: center
+  }
+
   @media (min-width: 1536px){
     #header_text{
-      margin-left: -35%;
+      margin-left: -48%;
       margin-top: 144px;
       font-size: 36px;
       flex-basis: 50%;
     }
 
     #img_width{
+      margin-left: 100px;
       width: 50vw;
     }
     
