Moved public inspection file to footer.

--- a/content/_index.html
+++ b/content/_index.html
@@ -62,8 +62,7 @@ lastmod: 2022-08-18
   </div>
 
   <div class="font-semibold text-md">
-    THE KSCU ONLINE PUBLIC INSPECTION FILE (OPIF) WITH ALL LISCENSING AND OTHER
-    FCC DOCUMENTS IS AVAILABLE HERE.
+    
   </div>
 </div>
 <br /><br />
@@ -84,7 +83,8 @@ lastmod: 2022-08-18
 	  mix-blend-mode: difference;
 	  /* font: 900 35vmin/35vh; */
     font-family: 'Special Elite', cursive;
-	  text-align: center
+	  text-align: center;
+    user-select: none;
   }
 
   @media (min-width: 1536px){
@@ -96,7 +96,7 @@ lastmod: 2022-08-18
     }
 
     #img_width{
-      margin-left: 100px;
+      margin-left: 120px;
       width: 50vw;
     }
     
@@ -109,7 +109,7 @@ lastmod: 2022-08-18
       flex-basis: 50%;
     }
     #img_width{
-      margin-left: 60px;
+      margin-left: 80px;
       width: 50vw;
     }
   }
@@ -125,6 +125,7 @@ lastmod: 2022-08-18
       font-size: 32px;
     }
     #img_width{
+      margin-left: 40px;
       width: 450px;
     }
   }
@@ -136,6 +137,7 @@ lastmod: 2022-08-18
       margin-top: 112px;
     }
     #img_width{
+      margin-left: 30px;
       width: 350px;
     }
   }
@@ -154,6 +156,7 @@ lastmod: 2022-08-18
     }
 
     #img_width{
+      margin-left: 20px;
       width: 300px;
     }
   }
@@ -165,6 +168,7 @@ lastmod: 2022-08-18
     }
 
     #img_width{
+      margin-left: 10px;
       width:250px;
     }
   }
