--- a/content/_index.html
+++ b/content/_index.html
@@ -77,6 +77,7 @@ lastmod: 2022-08-18
     }
   }-->
 <style>
+  
   @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
   #header_text {
     color: white;
@@ -86,7 +87,11 @@ lastmod: 2022-08-18
 	  text-align: center;
     user-select: none;
   }
-
+  /* For moving canvas up on homepage */
+  #canvas {
+    margin-top: -120px; 
+  }
+  
   @media (min-width: 1536px){
     #header_text{
       margin-left: -48%;
