--- a/content/_index.html
+++ b/content/_index.html
@@ -50,14 +50,14 @@ lastmod: 2022-08-18
 <div class="text-justify pt-3">
   <div class="text-lg font-light">
     <p>
-      KSCU 103.3 FM continues a long tradition of radio broadcasting at Santa
+      <!-- KSCU 103.3 FM continues a long tradition of radio broadcasting at Santa
       Clara University dating back to 1948 when Fr. Ferdinand J. Spieler, S.J.,
       created KVSC, “The Kampus Voice of Santa Clara.” Reflecting the mission
       and goals of Santa Clara University, the Jesuit University of Silicon
       Valley, the station has a proud history as a forum for the debate of
       issues, ideas, and concerns on campus and in the surrounding community,
       and it offers an eclectic selection of non-commercial music, sports, and
-      public affairs programming.
+      public affairs programming. -->
     </p>
   </div>
 
@@ -77,6 +77,7 @@ lastmod: 2022-08-18
     }
   }-->
 <style>
+  
   @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
   #header_text {
     color: white;
@@ -86,7 +87,11 @@ lastmod: 2022-08-18
 	  text-align: center;
     user-select: none;
   }
-
+  /* For moving canvas up on homepage */
+  #canvas {
+    margin-top: -130px; 
+  }
+  
   @media (min-width: 1536px){
     #header_text{
       margin-left: -48%;
