--- a/content/_index.html
+++ b/content/_index.html
@@ -22,14 +22,7 @@ lastmod: 2022-08-18
 <!-- width = 550; height = 257; (this is the max height)-->
 <div class="flex h-full">
   <div id="img_width">
-    <img
-      class="ml-3"
-      src="/kscuwebsitepic.jpeg"
-      alt="KSCU"
-      width=""
-      height=""
-      style="max-height: 257px; border-radius: 15px; opacity: 1; z-index: 1; "
-    />
+    <img class="ml-3" src="/kscuwebsitepic.jpeg" alt="KSCU" id="stylized-image" />
   </div>
 
   <div id="header_text" style="z-index: 2;">
@@ -38,9 +31,7 @@ lastmod: 2022-08-18
       <span class="font-semibold">
         STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp;
       </span>
-      <span>AT </span
-      ><span class="font-semibold"
-        >SANTA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <span>AT </span><span class="font-semibold">SANTA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         CLARA UNIVERSITY &nbsp;
       </span>
     </div>
@@ -62,7 +53,7 @@ lastmod: 2022-08-18
   </div>
 
   <div class="font-semibold text-md">
-    
+
   </div>
 </div>
 <br /><br />
@@ -77,43 +68,59 @@ lastmod: 2022-08-18
     }
   }-->
 <style>
-  
   @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+
   #header_text {
     color: white;
-	  mix-blend-mode: difference;
-	  /* font: 900 35vmin/35vh; */
+    mix-blend-mode: difference;
+    /* font: 900 35vmin/35vh; */
     font-family: 'Special Elite', cursive;
-	  text-align: center;
+    text-align: center;
     user-select: none;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;
   }
+
   /* For moving canvas up on homepage */
   #canvas {
-    margin-top: -130px; 
+    margin-top: -130px;
   }
-  
-  @media (min-width: 1536px){
-    #header_text{
+
+  #stylized-image {
+    max-height: 257px;
+    border-radius: 15px;
+    opacity: 1;
+    z-index: 1;
+    user-select: none;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;
+  }
+
+  /* Breakpoints */
+  @media (min-width: 1536px) {
+    #header_text {
       margin-left: -48%;
       margin-top: 144px;
       font-size: 36px;
       flex-basis: 50%;
     }
 
-    #img_width{
+    #img_width {
       margin-left: 120px;
       width: 50vw;
     }
-    
+
   }
-  @media (max-width: 1536px){
-    #header_text{
+
+  @media (max-width: 1536px) {
+    #header_text {
       margin-left: -30%;
       margin-top: 144px;
       font-size: 36px;
       flex-basis: 50%;
     }
-    #img_width{
+
+    #img_width {
       margin-left: 80px;
       width: 50vw;
     }
@@ -125,83 +132,84 @@ lastmod: 2022-08-18
     }
   }
 
-  @media (max-width: 1088px){
+  @media (max-width: 1088px) {
     #header_text {
       font-size: 32px;
     }
-    #img_width{
+
+    #img_width {
       margin-left: 40px;
       width: 450px;
     }
   }
 
-  @media (max-width: 931px){
-    #header_text{
+  @media (max-width: 931px) {
+    #header_text {
       font-size: 28px;
       margin-left: -20%;
       margin-top: 112px;
     }
-    #img_width{
+
+    #img_width {
       margin-left: 30px;
       width: 350px;
     }
   }
 
-  @media (max-width: 839px){
-    #header_text{
+  @media (max-width: 839px) {
+    #header_text {
       font-size: 24px;
     }
   }
 
-  @media (max-width: 666px){
-    #header_text{
+  @media (max-width: 666px) {
+    #header_text {
       font-size: 20px;
       margin-top: 96px;
       margin-left: -25%;
     }
 
-    #img_width{
+    #img_width {
       margin-left: 20px;
       width: 300px;
     }
   }
 
-  @media (max-width: 510px){
-    #header_text{
+  @media (max-width: 510px) {
+    #header_text {
       font-size: 16px;
       margin-left: -30%;
     }
 
-    #img_width{
+    #img_width {
       margin-left: 10px;
-      width:250px;
+      width: 250px;
     }
   }
 
-  @media (max-width: 418px){
-    #header_text{
+  @media (max-width: 418px) {
+    #header_text {
       font-size: 14px;
     }
   }
 
-  @media (max-width: 384px){
-    #header_text{
+  @media (max-width: 384px) {
+    #header_text {
       font-size: 13px;
     }
   }
 
-  @media (max-width: 369px){
-    #header_text{
+  @media (max-width: 369px) {
+    #header_text {
       margin-left: -50%;
       font-size: 12px;
       flex-basis: 50%
     }
   }
 
-  @media (max-width: 325px){
-    #header_text{
+  @media (max-width: 325px) {
+    #header_text {
       flex-basis: 60%;
     }
   }
-
 </style>
