Changed crowd to homepage only and removed crowd from Safari

--- a/content/_index.html
+++ b/content/_index.html
@@ -25,7 +25,7 @@ lastmod: 2022-08-18
     <img class="ml-3" src="/kscuwebsitepic.jpeg" alt="KSCU" id="stylized-image" />
   </div>
 
-  <div id="header_text" style="z-index: 2;">
+  <div id="header_text" style="z-index: 0;">
     <div class="">
       <!-- <span class="font-light"> THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span> -->
       <span class="font-semibold">
@@ -37,26 +37,11 @@ lastmod: 2022-08-18
     </div>
   </div>
 </div>
+<br>
+<br>
+<!-- // Import script crowd.js and defer -->
+<script src="crowd.js" defer></script>
 
-<div class="text-justify pt-3">
-  <div class="text-lg font-light">
-    <p>
-      <!-- KSCU 103.3 FM continues a long tradition of radio broadcasting at Santa
-      Clara University dating back to 1948 when Fr. Ferdinand J. Spieler, S.J.,
-      created KVSC, “The Kampus Voice of Santa Clara.” Reflecting the mission
-      and goals of Santa Clara University, the Jesuit University of Silicon
-      Valley, the station has a proud history as a forum for the debate of
-      issues, ideas, and concerns on campus and in the surrounding community,
-      and it offers an eclectic selection of non-commercial music, sports, and
-      public affairs programming. -->
-    </p>
-  </div>
-
-  <div class="font-semibold text-md">
-
-  </div>
-</div>
-<br /><br />
 <!-- -240px -->
 <!-- @media (max-width: 1280px){
     #header_text {
