Moved crowd to static and updated image.

--- a/content/_index.html
+++ b/content/_index.html
@@ -40,7 +40,7 @@ lastmod: 2022-08-18
 <br>
 <br>
 <!-- // Import script crowd.js and defer -->
-<script src="crowd.js" defer></script>
+<script src="/crowd.js" defer></script>
 
 <!-- -240px -->
 <!-- @media (max-width: 1280px){
