Added nicecast-metadata player

--- a/content/_index.html
+++ b/content/_index.html
@@ -38,6 +38,7 @@ lastmod: 2022-08-18
   </div>
 </div>
 <br>
+<p id="metadata">default title</p>
 <br>
 <!-- // Import script crowd.js and defer -->
 <script src="/crowd.js" defer></script>
