Populated recent tracks with data.

--- a/content/_index.html
+++ b/content/_index.html
@@ -39,50 +39,90 @@ lastmod: 2022-08-18
 </div>
 <br>
 
-<div class="flex flex-row justify-around" id="left-and-right">
+<div class="flex flex-row justify-between" id="left-and-right">
   <div class="flex flex-col w-[450px]	justify-end">
 
   </div>
 
 
-  <div class="flex flex-col border w-[450px]	justify-end">
+  <div class="flex flex-col border w-[450px] mr-3">
     <div class="flex flex-row items-center border-b">
       <span class="font-semibold text-xl m-2">
-        Recent Tracks
+        Recently Played Tracks
       </span>
     </div>
+
     <div class="flex flex-row items-center border-b">
       <!-- Img for profile picture with tailwind CSS -->
-      <img class="rounded-sm m-2" id="playing-image-2"
+      <img class="rounded-sm m-2" id="playing-image-0"
         src="https://is4-ssl.mzstatic.com/image/thumb/Music117/v4/0c/3a/9c/0c3a9c25-374e-f5b7-b6da-2bbe4bd16e27/821826013810.jpg/170x170bb.jpg"
         width="45px">
-      <div class="track flex flex-row items-center whitespace-nowrap overflow-scroll">
-        <p id="playing-song-1" class="pr-2 m-0 whitespace-nowrap">
-          Chinese Translation this is a test and yes
+      <div class="track flex flex-col items-left whitespace-nowrap overflow-scroll" style="font-weight: 500;">
+        <p id="playing-song-0" class="pr-2 m-0 whitespace-nowrap">
+          Chinese Translation
         </p>
-        <p>
-          -
-        </p>
-        <p id="playing-artist-1" class="pl-2 pr-2 m-0 italic">
+        <p id="playing-artist-0" class="pr-2 m-0 text-sm" style="font-weight: 400;">
           Twin Peaks
         </p>
       </div>
     </div>
-    <div class="track flex flex-row items-center whitespace-nowrap overflow-scroll">
+    <div class="flex flex-row items-center border-b">
+      <!-- Img for profile picture with tailwind CSS -->
+      <img class="rounded-sm m-2" id="playing-image-1"
+        src="https://is4-ssl.mzstatic.com/image/thumb/Music117/v4/0c/3a/9c/0c3a9c25-374e-f5b7-b6da-2bbe4bd16e27/821826013810.jpg/170x170bb.jpg"
+        width="45px">
+      <div class="track flex flex-col items-left whitespace-nowrap overflow-scroll" style="font-weight: 500;">
+        <p id="playing-song-1" class="pr-2 m-0 whitespace-nowrap">
+          Chinese Translation
+        </p>
+        <p id="playing-artist-1" class="pr-2 m-0 text-sm" style="font-weight: 400;">
+          Twin Peaks
+        </p>
+      </div>
+    </div>
+    <div class="flex flex-row items-center border-b">
       <!-- Img for profile picture with tailwind CSS -->
       <img class="rounded-sm m-2" id="playing-image-2"
         src="https://is4-ssl.mzstatic.com/image/thumb/Music117/v4/0c/3a/9c/0c3a9c25-374e-f5b7-b6da-2bbe4bd16e27/821826013810.jpg/170x170bb.jpg"
         width="45px">
-      <p id="playing-song-1" class="pl-2 pr-2 m-0 whitespace-nowrap">
-        Chinese Translation this is a test and yes
-      </p>
-      <p>
-        -
-      </p>
-      <p id="playing-artist-1" class="pl-2 pr-2 m-0 italic">
-        Twin Peaks
-      </p>
+      <div class="track flex flex-col items-left whitespace-nowrap overflow-scroll" style="font-weight: 500;">
+        <p id="playing-song-2" class="pr-2 m-0 whitespace-nowrap">
+          Chinese Translation
+        </p>
+        <p id="playing-artist-2" class="pr-2 m-0 text-sm" style="font-weight: 400;">
+          Twin Peaks
+        </p>
+      </div>
     </div>
+    <div class="flex flex-row items-center border-b">
+      <!-- Img for profile picture with tailwind CSS -->
+      <img class="rounded-sm m-2" id="playing-image-3"
+        src="https://is4-ssl.mzstatic.com/image/thumb/Music117/v4/0c/3a/9c/0c3a9c25-374e-f5b7-b6da-2bbe4bd16e27/821826013810.jpg/170x170bb.jpg"
+        width="45px">
+      <div class="track flex flex-col items-left whitespace-nowrap overflow-scroll" style="font-weight: 500;">
+        <p id="playing-song-3" class="pr-2 m-0 whitespace-nowrap">
+          Chinese Translation
+        </p>
+        <p id="playing-artist-3" class="pr-2 m-0 text-sm" style="font-weight: 400;">
+          Twin Peaks
+        </p>
+      </div>
+    </div>
+    <div class="flex flex-row items-center">
+      <!-- Img for profile picture with tailwind CSS -->
+      <img class="rounded-sm m-2" id="playing-image-4"
+        src="https://is4-ssl.mzstatic.com/image/thumb/Music117/v4/0c/3a/9c/0c3a9c25-374e-f5b7-b6da-2bbe4bd16e27/821826013810.jpg/170x170bb.jpg"
+        width="45px">
+      <div class="track flex flex-col items-left whitespace-nowrap overflow-scroll" style="font-weight: 500;">
+        <p id="playing-song-4" class="pr-2 m-0 whitespace-nowrap">
+          Chinese Translation
+        </p>
+        <p id="playing-artist-4" class="pr-2 m-0 text-sm" style="font-weight: 400;">
+          Twin Peaks
+        </p>
+      </div>
+    </div>
+    
 
   </div>
 </div>
