--- a/content/_index.html
+++ b/content/_index.html
@@ -13,7 +13,7 @@ showBreadcrumbs: true
 
 lastmod: 2022-08-18
 ---
-<script type="text/javascript" src="icecast-metadata-player-1.13.1.min.js"></script>
+<!-- <script type="text/javascript" src="js/icecast-metadata-player-1.13.1.min.js"></script> -->
 
 <!--breakpoint 1167 and up: text aligns w/ what's in the figma-->
 <!-- THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -->
