Added default images for when there are is no album art.

--- a/content/_index.html
+++ b/content/_index.html
@@ -55,7 +55,7 @@ lastmod: 2022-08-18
     <div class="flex flex-row items-center border-b">
       <!-- Img for profile picture with tailwind CSS -->
       <img class="rounded-sm m-2" id="playing-image-0"
-        src="https://is4-ssl.mzstatic.com/image/thumb/Music117/v4/0c/3a/9c/0c3a9c25-374e-f5b7-b6da-2bbe4bd16e27/821826013810.jpg/170x170bb.jpg"
+        src="/brett-jordan-unsplash.jpeg"
         width="45px">
       <div class="track flex flex-col items-left whitespace-nowrap overflow-scroll" style="font-weight: 500;">
         <p id="playing-song-0" class="pr-2 m-0 whitespace-nowrap">
