Updated title of homepage for social sharing.

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,6 @@
 ---
-title: "Schedule"
-description: "My Resume"
+title: "KSCU 103.3 FM"
+description: "The Underground Sound"
 
 showEdit: false
 showDateUpdated: false
