--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -19,5 +19,7 @@ article > header.max-w-prose {
 }
 
 </style>
+<div class="overflow-scroll">
 <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
     style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
+</div>
