--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -19,7 +19,15 @@ article > header.max-w-prose {
 }
 
 </style>
-<div class="overflow-scroll">
+<div style="overflow: hidden;">
 <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
     style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
 </div>
+<style>
+    /* If mobile make iSchedule class overflow scroll */
+    @media only screen and (max-width: 600px) {
+        .iSchedule {
+            overflow: scroll;
+        }
+    }
+</style>
