Changed default overflow to visible.

--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -19,7 +19,7 @@ article > header.max-w-prose {
 }
 
 </style>
-<div style="overflow: hidden;">
+<div style="overflow: visible;">
 <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
     style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
 </div>
