--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -19,8 +19,8 @@ article > header.max-w-prose {
 }
 
 </style>
-<div id=framewrapper style="overflow: visible;">
-<iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
+<div id="framewrapper" style="overflow: visible;">
+    <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
     style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
 </div>
 <style>
