--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -24,19 +24,26 @@ article > header.max-w-prose {
     style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
 </div>
 <style>
-    /* If mobile make iSchedule class overflow scroll */
-    @media only screen and (max-width: 1079px) {
+    @media (max-width: 1085px) {
         #framewrapper {
             overflow: scroll;
         }
+    }
+    /* If mobile make iSchedule class overflow scroll */
+    @media only screen and (max-width: 720px) {
+        #framewrapper {
+            display:block;
+            /* overflow: scroll; */
+            height: 5600px;
+        }
         .iSchedule {
             width: 100% !important;
-            height: 100% !important;
+            height: 5600px !important;
+        }
+        #content-wrapper {
+            width: 100%;
+            height: 5600px;
         }
     }
 
-    #content-wrapper {
-        width: 100%;
-        height: 1400px;
-    }
 </style>
