--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -19,21 +19,22 @@ article > header.max-w-prose {
 }
 
 </style>
-<div id="framewrapper" style="overflow: visible; width: 100%; height: 100%;">
+<div id="framewrapper" style="overflow: visible; width: 100%; height: 100%; overflow-wrap: break-word;">
     <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
-    style="width: 1024px; height: 1400px;" scrolling="auto" frameborder="0"></iframe>
+    style="width: 1024px; height: 1400px; overflow-wrap: break-word;" scrolling="auto" frameborder="0"></iframe>
 </div>
 <style>
     @media (max-width: 1085px) {
         #framewrapper {
             overflow: scroll;
         }
+
     }
     /* If mobile make iSchedule class overflow scroll */
     @media only screen and (max-width: 720px) {
         #framewrapper {
-            display:block;
-            /* overflow: scroll; */
+            /* display:block; */
+            overflow: scroll;
             height: 5600px;
         }
         .iSchedule {
