Added G Analytics and improved site descriptions for Google Bot .

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,6 @@
 ---
-title: "KSCU 103.3 FM"
-description: "The Underground Sound"
+title: "The Underground Sound | KSCU 103.3 FM"
+description: ""
 
 showEdit: false
 showDateUpdated: false
