--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -1,8 +1,8 @@
 ---
-title: "Schedule, Past Tracklists"
+title: "Schedule and Past Tracklists"
 date: 2020-08-14
 draft: false
-description: "KSCU Fall 2022 Schedule."
+description: "View the current KSCU schedule to check when your favorite DJ is on air or check out the tracklists of previous shows."
 showDate: false
 showAuthor: false
 showReadingTime: false
