--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -2,49 +2,38 @@
 title: "Schedule and Past Tracklists"
 date: 2020-08-14
 draft: false
-description: "View the current KSCU schedule to check when your favorite DJ is on air or check out the tracklists of previous shows."
+description: "View the current KSCU schedule to check when your favorite DJ is on air or check out the tracklists of
+previous shows."
 showDate: false
 showAuthor: false
 showReadingTime: false
-showEdit: false 
+showEdit: false
 showPagination: false
 ---
 <style>
-#metadata {
-    display: none;
-}
+    #metadata {
+        display: none;
+    }
 
-article > header.max-w-prose {
-    max-width: 100%;
-}
-
+    article>header.max-w-prose {
+        max-width: 100%;
+    }
 </style>
-<div id="framewrapper" style="overflow: visible; width: 100%; height: 100%; overflow-wrap: break-word;">
+
+<div id="framewrapper" style="overflow: visible; width: 100%; height: 100%;">
     <iframe class="iSchedule" src="https://spinitron.com/KSCU/calendar/?bodyclass=simple&sharing=0"
-    style="width: 1024px; height: 1400px; overflow-wrap: break-word;" scrolling="auto" frameborder="0"></iframe>
+        style="width: 1024px; height: 1400px; overflow-wrap: break-word;" scrolling="auto" frameborder="0"></iframe>
 </div>
 <style>
-    @media (max-width: 1085px) {
-        #framewrapper {
-            overflow: scroll;
-        }
-
-    }
-    /* If mobile make iSchedule class overflow scroll */
-    @media only screen and (max-width: 720px) {
-        #framewrapper {
-            /* display:block; */
-            overflow: scroll;
-            height: 5600px;
-        }
-        .iSchedule {
-            width: 100% !important;
-            height: 5600px !important;
-        }
+    @media screen and (max-width: 1090px) {
         #content-wrapper {
-            width: 100%;
-            height: 5600px;
+            max-width: 100% !important;
+        }
+
+        #framewrapper {
+            overflow: scroll !important;
+            border-left: 1px dashed; 
+            border-right: 1px dashed;
         }
     }
-
 </style>
