Temp fix for mobile scrolling of show.

--- a/content/_index.html
+++ b/content/_index.html
@@ -20,30 +20,6 @@ lastmod: 2022-08-18
   }
 </style>
 
-<!--breakpoint 1167 and up: text aligns w/ what's in the figma-->
-<!-- THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -->
-<!-- STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp; -->
-<!-- AT -->
-<!-- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; CLARA UNIVERSITY &nbsp; -->
-<!-- width = 550; height = 257; (this is the max height)-->
-<!-- <div class="flex h-full">
-  <div id="img_width">
-    <img src="/kscuwebsitepic.jpeg" alt="KSCU" id="stylized-image" />
-  </div>
-
-  <div id="header_text" style="z-index: 0;">
-    <div class="">
-      <span class="font-light"> THE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span>
-      <span class="font-semibold">
-        STUDENT-RUN RADIO &nbsp; &nbsp; &nbsp; STATION &nbsp; &nbsp;
-      </span>
-      <span>AT </span><span class="font-semibold">SANTA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        CLARA UNIVERSITY
-      </span>
-    </div>
-  </div>
-</div> -->
-
 <style>
   @media only screen and (max-width: 1825px) {
     #top-recent-and-next {
@@ -131,10 +107,8 @@ lastmod: 2022-08-18
 </div>
 
 <div id="header_text" style="z-index: 0; display: none;">
-  <p class="font-semibold">
-    STUDENT-RUN RADIO AT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-  </p>
-  <p class="font-semibold">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;SANTA CLARA UNIVERSITY
+  <p class="font-semibold">STUDENT-RUN RADIO AT</p>
+  <p class="font-semibold">&nbsp;SANTA CLARA &nbsp; UNIVERSITY
   </p>
 </div>
 
@@ -407,10 +381,6 @@ lastmod: 2022-08-18
   @media (max-width: 454px) {
     #top-recent-tracks-div {
       width: 73vw;
-    }
-
-    #post-break {
-      display: none;
     }
   }
 </style>
